feat: finish form-02 modern inputs. Standard checkbox. Standard html structure

--- a/index.html
+++ b/index.html
@@ -65,6 +65,43 @@
             </fieldset>
           </form>
         </section>
+        <section class="section_02">
+          <form action="" class="form-02">
+            <h2 class="form-02__title">Log in</h2>
+            <fieldset class="form-02__fieldset">
+              <input
+                type="email"
+                name="usermail"
+                id="usermail"
+                class="form-02__input"
+                placeholder="Type your email here"
+                required
+                maxlength="40"
+              />
+              <input
+                type="password"
+                name="password"
+                id="password"
+                class="form-02__input"
+                placeholder="Type your password"
+                required
+              />
+            </fieldset>
+            <fieldset class="form-02__fieldset">
+              <input
+                type="checkbox"
+                name="remember-me"
+                id="remember-me"
+                class="form-02__input"
+              />
+              <label for="remember-me" class="form-02__label">Remember me</label>
+            </fieldset>
+            <fieldset class="form-02__fieldset">
+              <button type="submit" class="form-02__button">Log in</button>
+              <button type="reset" class="form-02__button form-02__button_type_nofill">Reset</button>
+            </fieldset>
+          </form>
+        </section>
       </main>
     </div>
   </body>
