--- a/index.html
+++ b/index.html
@@ -57,11 +57,20 @@
                 id="remember-me"
                 class="form-01__input"
               />
-              <label for="remember-me" class="form-01__label form-01__label_type_inline">Remember me</label>
+              <label
+                for="remember-me"
+                class="form-01__label form-01__label_type_inline"
+                >Remember me</label
+              >
             </fieldset>
             <fieldset class="form-01__fieldset">
               <button type="submit" class="form-01__button">Log in</button>
-              <button type="reset" class="form-01__button form-01__button_type_nofill">Reset</button>
+              <button
+                type="reset"
+                class="form-01__button form-01__button_type_nofill"
+              >
+                Reset
+              </button>
             </fieldset>
           </form>
         </section>
@@ -94,11 +103,67 @@
                 id="remember-me"
                 class="form-02__input"
               />
-              <label for="remember-me" class="form-02__label">Remember me</label>
+              <label for="remember-me" class="form-02__label"
+                >Remember me</label
+              >
             </fieldset>
             <fieldset class="form-02__fieldset">
               <button type="submit" class="form-02__button">Log in</button>
-              <button type="reset" class="form-02__button form-02__button_type_nofill">Reset</button>
+              <button
+                type="reset"
+                class="form-02__button form-02__button_type_nofill"
+              >
+                Reset
+              </button>
+            </fieldset>
+          </form>
+        </section>
+        <section class="section_03">
+          <form action="" class="form-03">
+            <h2 class="form-03__title">Log in</h2>
+            <fieldset class="form-03__fieldset">
+              <label class="form-03__field"
+                >User name
+                <input
+                  type="text"
+                  name="username"
+                  class="form-03__input"
+                  placeholder="Type your username"
+                  required
+                  minlength="2"
+                  maxlength="25"
+                />
+              </label>
+              <label class="form-03__field"
+                >Password
+                <input
+                  type="password"
+                  name="password"
+                  class="form-03__input"
+                  placeholder="Type your password"
+                  required
+                />
+              </label>
+            </fieldset>
+            <fieldset class="form-03__fieldset">
+              <label class="form-03__field form-03__field_type_row">
+                <input
+                  type="checkbox"
+                  name="remember-me"
+                  class="form-03__checkbox_type_hidden"
+                />
+                <span class="form-03__chekcbox_type_custom"></span>
+                <span class="form-03__label">Remember me</span>
+              </label>
+            </fieldset>
+            <fieldset class="form-03__fieldset form-03__fieldset_type_row">
+              <button type="submit" class="form-03__button">Log in</button>
+              <button
+                type="reset"
+                class="form-03__button form-03__button_type_nofill"
+              >
+                Reset
+              </button>
             </fieldset>
           </form>
         </section>
