--- a/index-02.html
+++ b/index-02.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="form html css javascript" />
     <!-- styles -->
     <link rel="stylesheet" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./pages/index-02.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,36 +34,49 @@
         </nav>
       </header>
       <main class="main">
-        <section class="section_01">
-          <form action="" class="form" name="form01" novalidate>
+        <section class="section_02">
+          <form action="" class="form" name="form02" novalidate>
             <h2 class="form__title">Log in</h2>
             <fieldset class="form__fieldset">
-              <label for="username" class="form__label">Mail</label>
-              <input
-                type="email"
-                name="usermail"
-                id="usermail"
-                class="form__input"
-                placeholder="Type your email"
-                required
-                minlength="2"
-                maxlength="25"
-              />
-              <label for="password" class="form__label">Password</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-                class="form__input"
-                placeholder="Type your password"
-                required
-              />
+              <label class="form__label">
+                <input
+                  type="email"
+                  name="usermail"
+                  class="form__input"
+                  placeholder="Type your email here"
+                  required
+                  maxlength="40"
+                />
+                <span class="form__input-error"></span>
+              </label>
+              <label class="form__label">
+                <input
+                  type="url"
+                  name="image_url"
+                  class="form__input"
+                  placeholder="Type image url here"
+                />
+                <span class="form__input-error">dfg</span>
+              </label>
+              <label class="form__label">
+                <input
+                  type="password"
+                  name="password"
+                  class="form__input"
+                  placeholder="Type your password"
+                  required
+                />
+                <span class="form__input-error">asdf</span>
+              </label>
             </fieldset>
             <fieldset class="form__fieldset">
-              <input type="checkbox" name="remember-me" class="form__input" />
-              <label
-                for="remember-me"
-                class="form__label form__label_type_inline"
+              <input
+                type="checkbox"
+                name="remember-me"
+                id="remember-me"
+                class="form__input_type_checkbox"
+              />
+              <label for="remember-me" class="form__label"
                 >Remember me</label
               >
             </fieldset>
