--- a/index-03.html
+++ b/index-03.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="form html css javascript" />
     <!-- styles -->
     <link rel="stylesheet" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./pages/index-03.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,40 +34,45 @@
         </nav>
       </header>
       <main class="main">
-        <section class="section_01">
-          <form action="" class="form" name="form01" novalidate>
+        <section class="section_03">
+          <form action="" class="form">
             <h2 class="form__title">Log in</h2>
             <fieldset class="form__fieldset">
-              <label for="username" class="form__label">Mail</label>
-              <input
-                type="email"
-                name="usermail"
-                id="usermail"
-                class="form__input"
-                placeholder="Type your email"
-                required
-                minlength="2"
-                maxlength="25"
-              />
-              <label for="password" class="form__label">Password</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-                class="form__input"
-                placeholder="Type your password"
-                required
-              />
+              <label class="form__field"
+                >User name
+                <input
+                  type="text"
+                  name="username"
+                  class="form__input"
+                  placeholder="Type your username"
+                  required
+                  minlength="2"
+                  maxlength="25"
+                />
+              </label>
+              <label class="form__field"
+                >Password
+                <input
+                  type="password"
+                  name="password"
+                  class="form__input"
+                  placeholder="Type your password"
+                  required
+                />
+              </label>
             </fieldset>
             <fieldset class="form__fieldset">
-              <input type="checkbox" name="remember-me" class="form__input" />
-              <label
-                for="remember-me"
-                class="form__label form__label_type_inline"
-                >Remember me</label
-              >
+              <label class="form__field form__field_type_row">
+                <input
+                  type="checkbox"
+                  name="remember-me"
+                  class="form__checkbox_type_hidden"
+                />
+                <span class="form__chekcbox_type_custom"></span>
+                <span class="form__label">Remember me</span>
+              </label>
             </fieldset>
-            <fieldset class="form__fieldset">
+            <fieldset class="form__fieldset form__fieldset_type_row">
               <button type="submit" class="form__button">Log in</button>
               <button
                 type="reset"
