--- a/index-04.html
+++ b/index-04.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="form html css javascript" />
     <!-- styles -->
     <link rel="stylesheet" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./pages/index-04.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,40 +34,79 @@
         </nav>
       </header>
       <main class="main">
-        <section class="section_01">
-          <form action="" class="form" name="form01" novalidate>
+        <section class="section_04">
+          <form action="" class="form" novalidate>
             <h2 class="form__title">Log in</h2>
             <fieldset class="form__fieldset">
-              <label for="username" class="form__label">Mail</label>
-              <input
-                type="email"
-                name="usermail"
-                id="usermail"
-                class="form__input"
-                placeholder="Type your email"
-                required
-                minlength="2"
-                maxlength="25"
-              />
-              <label for="password" class="form__label">Password</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-                class="form__input"
-                placeholder="Type your password"
-                required
-              />
+              <label class="form__field">
+                <input
+                  type="email"
+                  name="usermail"
+                  class="form__input"
+                  placeholder="Type your mail here"
+                  required
+                />
+                <span class="form__input-error"></span>
+              </label>
+              <label class="form__field">
+                <input
+                  type="password"
+                  name="password"
+                  class="form__input"
+                  placeholder="Type your password"
+                  required
+                />
+                <span class="form__input-error"></span>
+              </label>
             </fieldset>
             <fieldset class="form__fieldset">
-              <input type="checkbox" name="remember-me" class="form__input" />
-              <label
-                for="remember-me"
-                class="form__label form__label_type_inline"
-                >Remember me</label
+              <label class="form__field form__field_type_row">
+                <input
+                  type="checkbox"
+                  name="remember-me"
+                  class="form__checkbox_type_hidden"
+                />
+                <span class="form__chekcbox_type_custom"></span>
+                <span class="form__label">Remember me</span>
+              </label>
+            </fieldset>
+            <fieldset class="form__fieldset form__fieldset_type_row">
+              <button type="submit" class="form__button">Log in</button>
+              <button
+                type="reset"
+                class="form__button form__button_type_nofill"
               >
+                Reset
+              </button>
             </fieldset>
+          </form>
+        </section>
+        <section class="section_04">
+          <form action="" class="form" novalidate>
+            <h2 class="form__title">Log in</h2>
             <fieldset class="form__fieldset">
+              <label class="form__field">
+                <input
+                  type="url"
+                  name="url "
+                  class="form__input"
+                  placeholder="Type your url here"
+                  required
+                />
+                <span class="form__input-error"></span>
+              </label>
+              <label class="form__field">
+                <input
+                  type="title"
+                  name="title"
+                  class="form__input"
+                  placeholder="Type title here"
+                  required
+                />
+                <span class="form__input-error"></span>
+              </label>
+            </fieldset>
+            <fieldset class="form__fieldset form__fieldset_type_row">
               <button type="submit" class="form__button">Log in</button>
               <button
                 type="reset"
