--- a/index-05.html
+++ b/index-05.html
@@ -35,48 +35,44 @@
       </header>
       <main class="main">
         <div class="form-content">
+          <h2 class="form-content__title">Log in</h2>
           <form action="" class="form" novalidate>
-            <h2 class="form__title">Log in</h2>
-            <fieldset class="form__fieldset">
+            <fieldset class="form__set">
               <label class="form__field">
                 <input
                   type="email"
                   name="usermail"
                   class="form__input"
-                  placeholder="Type your mail here"
                   required
                 />
                 <span class="form__input-error"></span>
+                <span class="form__placeholder">Email:</span>
               </label>
               <label class="form__field">
                 <input
                   type="password"
                   name="password"
                   class="form__input"
-                  placeholder="Type your password"
                   required
                 />
                 <span class="form__input-error"></span>
+                <span class="form__placeholder">Password:</span>
               </label>
-            </fieldset>
-            <fieldset class="form__fieldset">
               <label class="form__field form__field_type_row">
                 <input
                   type="checkbox"
                   name="remember-me"
-                  class="form__checkbox_type_hidden"
+                  class="form__input form__checkbox_type_hidden"
                 />
                 <span class="form__chekcbox_type_custom"></span>
-                <span class="form__label">Remember me</span>
+                <span class="form__input-error"></span>
+                <span class="form__text">Remember me</span>
               </label>
-            </fieldset>
-            <fieldset class="form__fieldset form__fieldset_type_row">
-              <button type="submit" class="form__button">Log in</button>
               <button
-                type="reset"
-                class="form__button form__button_type_nofill"
+                type="submit"
+                class="form__submit form__button button button__inactive"
               >
-                Reset
+                Log in
               </button>
             </fieldset>
           </form>
@@ -94,6 +90,6 @@
         dolores in voluptas quibusdam cupiditate.
       </p>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/form_validation.js"></script>
   </body>
 </html>
